Closed Bug 1296321 Opened 9 years ago Closed 9 years ago

dom/vr/VRDisplay.cpp:493:29: error: incomplete type 'mozilla::dom::Promise'

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

Details

Attachments

(1 file)

When using a .mozconfig with: ac_add_options --disable-webrtc ac_add_options --disable-eme then VRDisplay.cpp fails to compile: dom/vr/VRDisplay.cpp:493:29: error: incomplete type 'mozilla::dom::Promise' named in nested name specifier RefPtr<Promise> promise = Promise::Create(global, aRv); ^~~~~~~~~
Attached patch fixSplinter Review
add mozilla/dom/Promise.h move VRDisplayBinding.h last in mozilla/dom/ section for alphabetical order
Attachment #8782483 - Flags: review?(bugs)
Attachment #8782483 - Flags: review?(bugs) → review+
Pushed by mpalmgren@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/23e06df97a63 Add missing #include for Promise type. r=smaug
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: