Bug 1296321 - Add missing #include for Promise type.  r=smaug